--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "**/*.uf2": true
     },
     "files.associations": {
+        "*.rmd": "markdown",
         "*.h": "c",
         "*.c": "c",
         "*.inc": "c",
@@ -18,7 +19,70 @@
         "xstddef": "c",
         "type_traits": "c",
         "utility": "c",
-        "ranges": "c"
+        "ranges": "c",
+        "algorithm": "c",
+        "array": "c",
+        "atomic": "c",
+        "bit": "c",
+        "*.tcc": "c",
+        "cassert": "c",
+        "cctype": "c",
+        "cerrno": "c",
+        "cfloat": "c",
+        "chrono": "c",
+        "climits": "c",
+        "clocale": "c",
+        "cmath": "c",
+        "compare": "c",
+        "concepts": "c",
+        "cstdarg": "c",
+        "cstddef": "c",
+        "cstdint": "c",
+        "cstdio": "c",
+        "cstdlib": "c",
+        "cstring": "c",
+        "ctime": "c",
+        "cwchar": "c",
+        "cwctype": "c",
+        "deque": "c",
+        "list": "c",
+        "map": "c",
+        "set": "c",
+        "string": "c",
+        "unordered_map": "c",
+        "vector": "c",
+        "exception": "c",
+        "functional": "c",
+        "iterator": "c",
+        "memory": "c",
+        "memory_resource": "c",
+        "numeric": "c",
+        "optional": "c",
+        "random": "c",
+        "ratio": "c",
+        "string_view": "c",
+        "system_error": "c",
+        "tuple": "c",
+        "initializer_list": "c",
+        "iomanip": "c",
+        "ios": "c",
+        "iosfwd": "c",
+        "iostream": "c",
+        "istream": "c",
+        "limits": "c",
+        "locale": "c",
+        "new": "c",
+        "numbers": "c",
+        "ostream": "c",
+        "queue": "c",
+        "sstream": "c",
+        "stdexcept": "c",
+        "streambuf": "c",
+        "cinttypes": "c",
+        "cstdbool": "c",
+        "typeinfo": "c",
+        "version": "c",
+        "*.def": "c"
     },
     "[markdown]": {
         "editor.trimAutoWhitespace": false,
@@ -26,6 +90,6 @@
     },
     "python.formatting.provider": "yapf",
     "[json]": {
-	    "editor.formatOnSave": false
+        "editor.formatOnSave": false
     }
 }
